--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <body>
     <label for="bpm">BPM:</label>
     <input type="number" id="bpm" value="100" min="30" max="300">
-    <button id="start">Start</button>
-    <button id="stop">Stop</button>
     <br><br>
     <label for="volume">Volume:</label>
     <input type="range" id="volume" min="0" max="100" value="50">
@@ -21,6 +19,10 @@
         <div class="circle" id="circle2" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
         <div class="circle" id="circle3" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
         <div class="circle" id="circle4" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
+    </div>
+    <div id="buttons" style="display: flex; gap: 20px; margin: 30px 0 0 0; justify-content: center;">
+        <button id="start" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;transition:background 0.2s;">Start</button>
+        <button id="stop" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;" disabled>Stop</button>
     </div>
     <audio id="track" src="Track1.wav"></audio>
     <script>
@@ -67,18 +69,35 @@ document.getElementById('start').onclick = function() {
     beatCount = 0;
     window.barNumber = 0;
     document.getElementById('barCount').textContent = 'Bar: 0';
-    status.textContent = 'Metronome started';
+    status.textContent = '';
+    document.getElementById('start').style.background = '#4caf50';
+    document.getElementById('start').style.color = '#fff';
+    document.getElementById('start').disabled = true;
+    document.getElementById('stop').disabled = false;
     metronomeTick();
     interval = setInterval(() => {
         metronomeTick();
     }, 60000 / bpm);
 };
+
 document.getElementById('stop').onclick = function() {
     if (interval) clearInterval(interval);
     interval = null;
     trackAudio.pause();
     trackAudio.currentTime = 0;
-    status.textContent = 'Metronome stopped';
+    status.textContent = '';
+    document.getElementById('start').style.background = '#eee';
+    document.getElementById('start').style.color = '#000';
+    document.getElementById('start').disabled = false;
+    // STOP button green flash
+    const stopBtn = document.getElementById('stop');
+    stopBtn.style.background = '#4caf50';
+    stopBtn.style.color = '#fff';
+    setTimeout(() => {
+        stopBtn.style.background = '#eee';
+        stopBtn.style.color = '#000';
+    }, 50);
+    stopBtn.disabled = true;
     beatCount = 0;
     window.barNumber = 0;
     document.getElementById('barCount').textContent = 'Bar: 0';
