--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="buttons" style="display: flex; gap: 20px; margin: 30px 0 0 0; justify-content: center;">
         <button id="start" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;transition:background 0.2s;">Start</button>
-        <button id="stop" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;" disabled>Stop</button>
+        <button id="stop" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;color:#888;" disabled>Stop</button>
     </div>
     <audio id="track" src="Track1.wav"></audio>
     <script>
@@ -73,7 +73,9 @@ document.getElementById('start').onclick = function() {
     document.getElementById('start').style.background = '#4caf50';
     document.getElementById('start').style.color = '#fff';
     document.getElementById('start').disabled = true;
-    document.getElementById('stop').disabled = false;
+    const stopBtn = document.getElementById('stop');
+    stopBtn.disabled = false;
+    stopBtn.style.color = '#000';
     metronomeTick();
     interval = setInterval(() => {
         metronomeTick();
@@ -95,7 +97,7 @@ document.getElementById('stop').onclick = function() {
     stopBtn.style.color = '#fff';
     setTimeout(() => {
         stopBtn.style.background = '#eee';
-        stopBtn.style.color = '#000';
+        stopBtn.style.color = '#888';
     }, 50);
     stopBtn.disabled = true;
     beatCount = 0;
