--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MetroProg</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <label for="bpm">BPM:</label>
@@ -13,19 +14,19 @@
     <input type="range" id="volume" min="0" max="100" value="50">
     <span id="volumeValue">50</span>
     <div id="status"></div>
-    <div id="barCount" style="text-align:center;font-size:1.5em;margin-bottom:10px;">Bar: 0</div>
-    <div id="circles" style="display: flex; gap: 20px; margin: 20px 0; justify-content: center;">
-        <div class="circle" id="circle1" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
-        <div class="circle" id="circle2" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
-        <div class="circle" id="circle3" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
-        <div class="circle" id="circle4" style="width:30px;height:30px;border-radius:50%;background:#ccc;"></div>
+    <div id="barCount">Bar: 0</div>
+    <div id="circles">
+        <div class="circle" id="circle1"></div>
+        <div class="circle" id="circle2"></div>
+        <div class="circle" id="circle3"></div>
+        <div class="circle" id="circle4"></div>
     </div>
-    <div id="buttons" style="display: flex; gap: 20px; margin: 30px 0 0 0; justify-content: center;">
-        <button id="start" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;transition:background 0.2s;">Start</button>
-        <button id="stop" style="width:60px;height:60px;border-radius:8px;background:#eee;border:2px solid #888;font-size:1em;color:#888;" disabled>Stop</button>
+    <div id="buttons">
+        <button id="start">Start</button>
+        <button id="stop" disabled>Stop</button>
     </div>
-    <audio id="track" src="Track1.wav"></audio>
-    <script>
+    <audio id="track" src="assets/Track1.wav"></audio>
+    <script src="js/metronome.js">
 let interval = null;
 const status = document.getElementById('status');
 const volumeSlider = document.getElementById('volume');
