--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <label for="volume">Volume:</label>
+    <input type="range" id="volume" min="0" max="100" value="100">
+    <input type="number" id="volumeValue" value="100" min="0" max="100" style="width: 50px;">
+    <br><br>
     <label for="bpm">BPM:</label>
     <input type="number" id="bpm" value="100" min="30" max="300">
-    <br><br>
-    <label for="volume">Volume:</label>
-    <input type="range" id="volume" min="0" max="100" value="50">
-    <span id="volumeValue">50</span>
     <div id="status"></div>
     <div id="barCount">Bar: 0</div>
     <div id="circles">
