--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <input type="range" id="volume" min="0" max="100" value="100">
     <input type="number" id="volumeValue" value="100" min="0" max="100" style="width: 50px;">
     <br><br>
-    <label for="bpm">BPM:</label>
+    <label for="bpm">Starting BPM:</label>
     <input type="number" id="bpm" value="100" min="30" max="300">
+    <br><br>
+    <label for="repeatingBars">Repeating bars:</label>
+    <input type="number" id="repeatingBars" value="4" min="1" max="10">
+    <br><br>
+    <label for="bpmIncrease">BPM increase:</label>
+    <input type="number" id="bpmIncrease" value="4" min="1" max="10">
+    <br><br>
+    <label for="bpmDecrease">BPM decrease:</label>
+    <input type="number" id="bpmDecrease" value="2" min="1" max="10">
     <div id="status"></div>
     <div id="barCount">Bar: 0</div>
     <div id="circles">
