Moved BPM counter on top of Beat counter

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <input type="number" id="bpmDecrease" value="2" min="1" max="10">
     </div>
     <div id="status"></div>
+    <div id="currentBpmDisplay">BPM: 100</div>
     <div id="barCount">Bar: 0</div>
     <div id="circles">
         <div class="circle" id="circle1"></div>
