Fixed preload audio issue

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button id="start">Start</button>
         <button id="stop" disabled>Stop</button>
     </div>
-    <audio id="track" src="assets/Track1.wav"></audio>
+    <audio id="track" src="assets/Track1.wav" preload="auto"></audio>
     <script src="js/metronome.js">
 let interval = null;
 const status = document.getElementById('status');
