--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MetroProg</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/constants.js"></script>
 </head>
 <body>
     <div class="input-group">
         <label for="volume">Volume:</label>
-        <input type="range" id="volume" min="0" max="100" value="100">
-        <input type="number" id="volumeValue" value="100" min="0" max="100" style="width: 50px;">
+        <input type="range" id="volume" min="0" max="100">
+        <input type="number" id="volumeValue" style="width: 50px;">
     </div>
 
     <div class="input-group">
         <label for="bpm">Starting BPM:</label>
-        <input type="number" id="bpm" value="100" min="30" max="300">
+        <input type="number" id="bpm">
+        <span class="range-hint"></span>
     </div>
 
     <div class="input-group">
         <label for="repeatingBars">Repeating bars:</label>
-        <input type="number" id="repeatingBars" value="4" min="1" max="10">
+        <input type="number" id="repeatingBars">
+        <span class="range-hint"></span>
     </div>
 
     <div class="input-group">
         <label for="bpmIncrease">BPM increase:</label>
-        <input type="number" id="bpmIncrease" value="4" min="1" max="10">
+        <input type="number" id="bpmIncrease">
+        <span class="range-hint"></span>
     </div>
 
     <div class="input-group">
         <label for="bpmDecrease">BPM decrease:</label>
-        <input type="number" id="bpmDecrease" value="2" min="1" max="10">
+        <input type="number" id="bpmDecrease">
+        <span class="range-hint"></span>
     </div>
     <div id="status"></div>
     <div id="currentBpmDisplay">BPM: 100</div>
