bpm counter now matches config value

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span class="range-hint"></span>
     </div>
     <div id="status"></div>
-    <div id="currentBpmDisplay">BPM: 100</div>
+    <div id="currentBpmDisplay"></div>
     <div id="barCount">Bar: 0</div>
     <div id="circles">
         <div class="circle" id="circle1"></div>
