--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </div>
 
     <div class="input-group">
+        <label for="targetBpm">Target BPM:</label>
+        <input type="number" id="targetBpm">
+        <span class="range-hint"></span>
+    </div>
+
+    <div class="input-group">
         <label for="repeatingBars">Repeating bars:</label>
         <input type="number" id="repeatingBars">
         <span class="range-hint"></span>
